--- a/index.html
+++ b/index.html
@@ -20,30 +20,33 @@
   <div id="status"></div>
 
   <script>
-    const email = new URLSearchParams(window.location.search).get("email");
-    const WEBHOOK_URL = "https://script.google.com/macros/s/AKfycbxkZ-_cBt6dFda-mqCRCXKadKm7AN4dyNY75REPEyqD9yVa4hRSO24cVPgMfbX_7Wz1lw/exec";
+  const email = new URLSearchParams(window.location.search).get("email");
+  const WEBHOOK_URL = "https://script.google.com/macros/s/AKfycbxkZ-_cBt6dFda-mqCRCXKadKm7AN4dyNY75REPEyqD9yVa4hRSO24cVPgMfbX_7Wz1lw/exec";
 
-    if (email) {
-      fetch(WEBHOOK_URL, {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify({ email })
-      })
-      .then(res => {
-        if (res.ok) {
-          document.getElementById("status").innerText = "Заявка успешно отправлена.";
-        } else {
-          document.getElementById("status").innerText = "Не удалось отправить заявку.";
-        }
-      })
-      .catch(() => {
-        document.getElementById("status").innerText = "Ошибка при отправке заявки.";
-      });
-    } else {
-      document.getElementById("status").innerText = "Email не указан.";
-    }
-  </script>
+  if (email) {
+    const formData = new URLSearchParams();
+    formData.append("email", email);
+
+    fetch(WEBHOOK_URL, {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/x-www-form-urlencoded"
+      },
+      body: formData.toString()
+    })
+    .then(res => {
+      if (res.ok) {
+        document.getElementById("status").innerText = "Заявка успешно отправлена.";
+      } else {
+        document.getElementById("status").innerText = "Не удалось отправить заявку.";
+      }
+    })
+    .catch(() => {
+      document.getElementById("status").innerText = "Ошибка при отправке заявки.";
+    });
+  } else {
+    document.getElementById("status").innerText = "Email не указан.";
+  }
+</script>
 </body>
 </html>
