--- a/interests.html
+++ b/interests.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <div class="thanks">Спасибо! Мы получили вашу заявку.</div>
+  <div class="thanks">Спасибо! Мы получили вашу заявку. ТЕСТ</div>
   <div id="status">Отправка...</div>
 
   <script>
