--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       const now = new Date().toLocaleString("ru-RU");
       const message = encodeURIComponent(`💌 Новый интерес!\nEmail: ${email}\nВремя: ${now}`);
       const BOT_TOKEN = "7592263136:AAFLYNViv9zaIuBxDXeXV8H70oTk49ubDMI";
-      const CHAT_ID = "709412015";
+      const CHAT_ID = "-1002855183247";
 
       const telegramURL = `https://api.telegram.org/bot${BOT_TOKEN}/sendMessage?chat_id=${CHAT_ID}&text=${message}`;
 
